# portals-dashboards

./: payment_grid_dashboard.py  pyproject.toml  warmcache_grid_dashboard.py
templates/: cachewarm_dashboard.json.tpl  cachewarm_group.json.tpl  payment_execution_dashboard.json.tpl  payment_execution_group.json.tpl
