[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Christophe Khamly <christophe@getflex.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
